# neemo_player

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cc
docs/: index.html
src/: common.h  editor.cc  editor.h  pane.h  tab.h
src/panes/: bindings_list.cc  bindings_list.h  queue_list.cc  queue_list.h  song_list.cc  song_list.h
src/tabs/: bindings.h  queue.cc  queue.h  songs.cc  songs.h
